<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fypbgptrn"
    tools:context=".MerchantDashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DASHBOARD"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:textColor="@color/white"
            style="@style/TextViewSemiBoldBlack"/>

        <ImageView
            android:id="@+id/logout_button"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:src="@drawable/ic_logout"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_marginBottom="100sp"
        android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">


            <LinearLayout
                android:id="@+id/lr_add_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="22sp"
                    android:layout_height="22sp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_add_product"
                    android:scaleType="fitXY"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_100"
                    android:layout_gravity="center"
                    style="@style/TextViewRegularNormal"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_product"
                    android:layout_gravity="center"
                    style="@style/TextViewSemiBoldBlack"
                    android:gravity="center"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">


            <LinearLayout
                android:id="@+id/lr_orderprocess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="22sp"
                    android:layout_height="22sp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_pending_order"
                    android:scaleType="fitXY"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_10"
                    android:layout_gravity="center"
                    style="@style/TextViewRegularNormal"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_in_process"
                    android:layout_gravity="center"
                    style="@style/TextViewSemiBoldBlack"
                    android:gravity="center"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="22sp"
                    android:layout_height="22sp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_cancel_order"
                    android:scaleType="fitXY"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_20"
                    android:layout_gravity="center"
                    style="@style/TextViewRegularNormal"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancle_order"
                    android:layout_gravity="center"
                    style="@style/TextViewSemiBoldBlack"
                    android:gravity="center"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="22sp"
                    android:layout_height="22sp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_complete_order"
                    android:scaleType="fitXY"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_200"
                    android:layout_gravity="center"
                    style="@style/TextViewRegularNormal"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/complete"
                    android:layout_gravity="center"
                    style="@style/TextViewSemiBoldBlack"
                    android:gravity="center"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>