<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_greyish"
    android:id="@+id/main_layout"
    tools:context=".User_Dashboard">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorwhite"
        android:layout_above="@+id/lnlayout1">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22sp"
                    android:layout_height="22sp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_fyp_location" />

                <TextView
                    android:id="@+id/tv_currentlocation"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:maxLength="21"
                    style="@style/TextViewRegularBlack"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="150sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:src="@drawable/fyplogo"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lr_serchproductbyshop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_search">


                <ImageView
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_search"/>

                <AutoCompleteTextView
                    android:id="@+id/act_search_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_product_by_nearest_shop"
                    android:textColor="@color/Gray"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    style="@style/TextViewRegularNormal"
                    android:textSize="16sp"
                    android:background="@drawable/bg_edit_search"/>

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:elevation="5dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="170dp">
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentTop="true" />

                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/offertitle"
                style="@style/TextViewSemiBoldBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="16sp"
                android:text="@string/latest_offers"
                android:textColor="@color/DarkGray"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_offers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"></androidx.recyclerview.widget.RecyclerView>

            <TextView

                style="@style/TextViewSemiBoldBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="16sp"
                android:text="@string/top_brand_spotlight"
                android:textColor="@color/DarkGray"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <LinearLayout
        android:elevation="1dp"
        android:id="@+id/lnlayout1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="5">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <include
                layout="@layout/bottom_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>